Added new entry creation fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,13 @@
     <string name="app_name">Red</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    
+    <string-array name="icons">
+        <item>😃 Happy</item>
+        <item>🙂 Okay</item>
+        <item>😑 Upset</item>
+        <item>🌟 Other</item>
+        <item>🎄 Holidays</item>
+
+    </string-array>
 </resources>
