Visual changes to the app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,9 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     
     <string-array name="icons">
-        <item>😃 Happy</item>
-        <item>🙂 Okay</item>
-        <item>😑 Upset</item>
+        <item>Happy</item>
+        <item>Okay</item>
+        <item>Upset</item>
 
     </string-array>
 </resources>
